[gd_scene load_steps=16 format=2]

[ext_resource path="res://Art/Items/Pie.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Montserrat-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/zarubkaType-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Art/Buttons/ChooseNotPressed.png" type="Texture" id=4]
[ext_resource path="res://Art/Subtract.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Panel2.gd" type="Script" id=6]
[ext_resource path="res://Art/Buttons/ChooseHover.png" type="Texture" id=7]
[ext_resource path="res://Art/Buttons/ChoosePressed.png" type="Texture" id=8]
[ext_resource path="res://Art/Buttons/DeletePressed.png" type="Texture" id=9]
[ext_resource path="res://Art/Buttons/DeleteNotPressed.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Buttons/InventoryButton.tscn" type="PackedScene" id=11]
[ext_resource path="res://Art/Buttons/DeleteHover.png" type="Texture" id=12]
[ext_resource path="res://Sounds/Button_dawn.wav" type="AudioStream" id=13]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 2 )

[node name="NinePatchRect" type="NinePatchRect"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -158.0
margin_top = -86.0
margin_right = 158.0
margin_bottom = 80.0
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Label" type="Label" parent="."]
margin_left = 67.0
margin_top = 13.0
margin_right = 125.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
text = "Инвентарь"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 37.0
margin_right = -7.0
margin_bottom = -9.0
rect_min_size = Vector2( 0, 100 )

[node name="GridContainer" type="GridContainer" parent="HBoxContainer"]
margin_right = 180.0
margin_bottom = 120.0
rect_min_size = Vector2( 139, 104 )
custom_constants/vseparation = 5
custom_constants/hseparation = 5
columns = 5

[node name="TextureButton" parent="HBoxContainer/GridContainer" instance=ExtResource( 11 )]

[node name="TextureButton2" parent="HBoxContainer/GridContainer" instance=ExtResource( 11 )]
margin_left = 37.0
margin_right = 69.0
number = 1

[node name="TextureButton3" parent="HBoxContainer/GridContainer" instance=ExtResource( 11 )]
margin_left = 74.0
margin_right = 106.0
number = 2

[node name="TextureButton4" parent="HBoxContainer/GridContainer" instance=ExtResource( 11 )]
margin_left = 111.0
margin_right = 143.0
number = 3

[node name="TextureButton5" parent="HBoxContainer/GridContainer" instance=ExtResource( 11 )]
margin_left = 148.0
margin_right = 180.0
number = 4

[node name="TextureButton6" parent="HBoxContainer/GridContainer" instance=ExtResource( 11 )]
margin_top = 37.0
margin_bottom = 69.0
number = 5

[node name="TextureButton7" parent="HBoxContainer/GridContainer" instance=ExtResource( 11 )]
margin_left = 37.0
margin_top = 37.0
margin_right = 69.0
margin_bottom = 69.0
number = 6

[node name="TextureButton8" parent="HBoxContainer/GridContainer" instance=ExtResource( 11 )]
margin_left = 74.0
margin_top = 37.0
margin_right = 106.0
margin_bottom = 69.0
number = 7

[node name="TextureButton9" parent="HBoxContainer/GridContainer" instance=ExtResource( 11 )]
margin_left = 111.0
margin_top = 37.0
margin_right = 143.0
margin_bottom = 69.0
number = 8

[node name="TextureButton10" parent="HBoxContainer/GridContainer" instance=ExtResource( 11 )]
margin_left = 148.0
margin_top = 37.0
margin_right = 180.0
margin_bottom = 69.0
number = 9

[node name="TextureButton11" parent="HBoxContainer/GridContainer" instance=ExtResource( 11 )]
margin_top = 74.0
margin_bottom = 106.0
number = 10

[node name="TextureButton12" parent="HBoxContainer/GridContainer" instance=ExtResource( 11 )]
margin_left = 37.0
margin_top = 74.0
margin_right = 69.0
margin_bottom = 106.0
number = 11

[node name="TextureButton13" parent="HBoxContainer/GridContainer" instance=ExtResource( 11 )]
margin_left = 74.0
margin_top = 74.0
margin_right = 106.0
margin_bottom = 106.0
number = 12

[node name="TextureButton14" parent="HBoxContainer/GridContainer" instance=ExtResource( 11 )]
margin_left = 111.0
margin_top = 74.0
margin_right = 143.0
margin_bottom = 106.0
number = 13

[node name="TextureButton15" parent="HBoxContainer/GridContainer" instance=ExtResource( 11 )]
margin_left = 148.0
margin_top = 74.0
margin_right = 180.0
margin_bottom = 106.0
number = 14

[node name="Objects" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 184.0
margin_right = 304.0
margin_bottom = 120.0
rect_min_size = Vector2( 100, 120 )
custom_constants/separation = 5

[node name="Label" type="Label" parent="HBoxContainer/Objects"]
margin_right = 120.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 1 )
text = "Пирожок"
align = 1

[node name="ItemPhoto" type="TextureRect" parent="HBoxContainer/Objects"]
margin_top = 18.0
margin_right = 120.0
margin_bottom = 68.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Label2" type="Label" parent="HBoxContainer/Objects"]
margin_top = 73.0
margin_right = 120.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 1 )
text = " +3 к здоровью"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Objects"]
margin_top = 91.0
margin_right = 120.0
margin_bottom = 106.0
custom_constants/separation = 0

[node name="Use" type="TextureButton" parent="HBoxContainer/Objects/HBoxContainer"]
margin_right = 60.0
margin_bottom = 15.0
rect_min_size = Vector2( 60, 15 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/Objects/HBoxContainer/Use"]
margin_left = 4.0
margin_right = 54.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "Выбрать"
align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="HBoxContainer/Objects/HBoxContainer/Use"]
stream = ExtResource( 13 )
bus = "ButtonSound"

[node name="Drop" type="TextureButton" parent="HBoxContainer/Objects/HBoxContainer"]
margin_left = 60.0
margin_right = 120.0
margin_bottom = 15.0
rect_min_size = Vector2( 60, 3 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/Objects/HBoxContainer/Drop"]
margin_left = 5.0
margin_right = 55.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "Удалить"
align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="HBoxContainer/Objects/HBoxContainer/Drop"]
stream = ExtResource( 13 )
bus = "ButtonSound"

[connection signal="button_down" from="HBoxContainer/Objects/HBoxContainer/Use" to="." method="_on_Use_button_down"]
[connection signal="button_up" from="HBoxContainer/Objects/HBoxContainer/Use" to="." method="_on_Use_button_up"]
[connection signal="mouse_entered" from="HBoxContainer/Objects/HBoxContainer/Use" to="." method="_on_Use_mouse_entered"]
[connection signal="button_down" from="HBoxContainer/Objects/HBoxContainer/Drop" to="." method="_on_Drop_button_down"]
[connection signal="button_up" from="HBoxContainer/Objects/HBoxContainer/Drop" to="." method="_on_Drop_button_up"]
[connection signal="mouse_entered" from="HBoxContainer/Objects/HBoxContainer/Drop" to="." method="_on_Drop_mouse_entered"]
